--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
+        <provider
+                android:authorities="com.laazer.sunshine.app"
+                android:name=".data.WeatherProvider" />
     </application>
 
 </manifest>
